fixes body overflow hidden

--- a/src/app/components/problemsDash/ProblemsDash.scss
+++ b/src/app/components/problemsDash/ProblemsDash.scss
@@ -52,7 +52,4 @@
     margin: 0 auto;
     max-width: 80vw;
   }
-  body {
-    overflow: hidden;
-  }
 }
