--- a/src/app/pages/dashboard/Problems.scss
+++ b/src/app/pages/dashboard/Problems.scss
@@ -134,3 +134,10 @@
     top: 57vh;
   }
 }
+
+@media screen and (min-width: 1030px) {
+  .Problems {
+    overflow: hidden;
+    position: relative;
+  }
+}
